# binance-ingestor

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/v1/: endpoints.py
app/core/: cli.py  config.py
app/db/: clickhouse.py  redis.py
app/models/: market_data.py
app/services/: anomaly_detector.py  broadcaster.py  ingestor.py  orderbook.py  telegram.py
sql/: init.sql
