[project]
name = "binance-ingestor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiochclient>=2.6.0",
    "aiohttp>=3.13.3",
    "click>=8.3.1",
    "fastapi>=0.135.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "redis>=7.3.0",
    "structlog>=25.5.0",
    "uvicorn[standard]>=0.41.0",
    "uvloop>=0.22.1",
]
